# ChangeGuard

./: .codex  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  check_version.rs  deny.toml  final-review.md  hello.rs  master-milestone-b-review.md  milestone-b-review.md  milestone-j-review.md  review-final2.md  review.md  review_cg_f3.md  review_e0_2.md  review_e0_3.md  review_s4.md  schema.json
.agents/: plan.md  review_gf1_round10.md  review_gf1_round5.md  review_gf1_round7.md  review_gf1_round9.md  review_gf3_round3.md  review_gf4_round1.md
.agents/rules/: core-mandates.md  knowledge-graph.md  shell.md
.codex/: review_gf1_round6.md  review_gf1_round8.md  review_gf2_round1.md  review_gf3_round1.md  review_gf3_round2.md  settings.local.json
.codex/workflows/: onboarding.md
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json
.planning/: plan.md  spec.md
.project-ledger/: ledger.db-shm  ledger.db-wal
Docs/: Engineering.md
conductor/: conductor.md
conductor/track1/: plan.md  spec.md
conductor/track10/: plan.md  spec.md
conductor/track11/: plan.md  spec.md
conductor/track12/: plan.md  spec.md
conductor/track13/: plan.md  spec.md
conductor/track14/: plan.md  spec.md
conductor/track15/: plan.md  spec.md
conductor/track16/: plan.md  spec.md
conductor/track17/: plan.md  spec.md
conductor/track18/: plan.md  spec.md
conductor/track19/: plan.md  spec.md
conductor/track2/: plan.md  spec.md
conductor/track20/: plan.md  spec.md
conductor/track21/: plan.md  spec.md
conductor/track22/: plan.md  spec.md
conductor/track23/: plan.md  spec.md
conductor/track24/: plan.md  spec.md
conductor/track25/: plan.md  spec.md
conductor/track26/: plan.md  spec.md
conductor/track27/: plan.md  spec.md
conductor/track28/: plan.md  spec.md
conductor/track29/: plan.md  spec.md
conductor/track3/: plan.md  spec.md
conductor/track30/: plan.md  spec.md
conductor/track31/: plan.md  spec.md
conductor/track32/: plan.md  spec.md
conductor/track33/: plan.md  spec.md
conductor/track34/: plan.md  spec.md
conductor/track35/: plan.md  spec.md
conductor/track36/: plan.md  spec.md
conductor/track37/: plan.md  spec.md
conductor/track38/: plan.md  spec.md
conductor/track39/: plan.md  spec.md
conductor/track4/: plan.md  spec.md
conductor/track40/: plan.md  spec.md
conductor/track41/: plan.md  spec.md
conductor/track42/: plan.md  spec.md
conductor/track43/: plan.md  spec.md
conductor/track44/: plan.md  spec.md
conductor/track45/: plan.md  spec.md
conductor/track46/: plan.md  spec.md
conductor/track47/: plan.md  spec.md
conductor/track48/: plan.md  spec.md
conductor/track49/: plan.md  spec.md
conductor/track5/: plan.md  spec.md
conductor/track50-1/: plan.md  spec.md
conductor/track50-2/: plan.md  spec.md
conductor/track51-1/: plan.md  spec.md
conductor/track52-1/: plan.md  spec.md
conductor/track52-2/: plan.md  spec.md
conductor/track53-1/: plan.md  spec.md
conductor/track54-1/: plan.md  spec.md
conductor/track55-1/: plan.md  spec.md
conductor/track56-1/: plan.md  spec.md
conductor/track57-1/: plan.md  spec.md
conductor/track6/: plan.md  spec.md
conductor/track7/: plan.md  spec.md
conductor/track8/: plan.md  spec.md
conductor/track9/: plan.md  spec.md
conductor/trackB1/: plan.md  spec.md
conductor/trackB2/: plan.md  spec.md
conductor/trackB3/: plan.md  spec.md
conductor/trackB4/: plan.md  spec.md
conductor/trackB5/: plan.md  spec.md
conductor/trackB6/: plan.md  spec.md
conductor/trackB7/: plan.md  spec.md
conductor/trackC1/: plan.md  spec.md
conductor/trackC2/: plan.md  spec.md
conductor/trackC3/: plan.md  spec.md
conductor/trackCG-F1/: plan.md  spec.md
conductor/trackCG-F2/: plan.md  spec.md
conductor/trackCG-F3/: plan.md  spec.md
conductor/trackCG-F4/: plan.md  spec.md
conductor/trackCG-F5/: plan.md  spec.md
conductor/trackCG-F6/: plan.md  spec.md
conductor/trackCR1/: plan.md  spec.md
conductor/trackCR2/: plan.md  spec.md
conductor/trackCR3/: plan.md  spec.md
conductor/trackCR4/: plan.md  spec.md
conductor/trackCR5/: plan.md  spec.md
conductor/trackCR6/: plan.md  spec.md
conductor/trackCR7/: plan.md  spec.md
conductor/trackCR8/: plan.md  spec.md
conductor/trackCR9/: plan.md  spec.md
conductor/trackE0-1/: plan.md  spec.md
conductor/trackE0-2/: plan.md  spec.md
conductor/trackE0-3/: plan.md  spec.md
conductor/trackE0-4/: plan.md  spec.md
conductor/trackE1-1/: plan.md  spec.md
conductor/trackE1-2/: plan.md  spec.md
docs/: Engineering.md  Features.md  GF-review.md  Ledger-Incorp-plan.md  Product.md  TrackingAbility.md  architecture.md  audit.md  audit6.md  breaking.md  help2.md  implementation-plan.md  installation.md  observability-plan2.md  prd.md  sourcebot-plan.md  status.md  upgrade-notes.md
install/: install.ps1  install.sh
output/: codex_prompt_gf5.txt  codex_prompt_gf5_r2.txt  command-audit.md  final_graph.html  review_gf5.md  review_gf5_r2.md  review_test2.md  run_codex_gf5.bat  run_codex_gf5_r2.bat  viz_test
scratch/: repro_gitignore.rs  test_cozo.rs
scripts/: pre-commit.ps1  pre-commit.sh
src/: cli.rs  lib.rs  main.rs
templates/: arc_diagram.html
tests/: bridge_ask_tests.rs  bridge_export_tests.rs  bridge_import_tests.rs  bridge_ipc_tests.rs  bridge_lineage_tests.rs  bridge_notify_tests.rs  bridge_query_tests.rs  bridge_tests.rs  ci_prediction.rs  cli_ask.rs  cli_binary.rs  cli_doctor.rs  cli_impact.rs  cli_init.rs  cli_reset.rs  cli_scan.rs  cli_verify.rs  cli_verify_rules.rs  cli_watch.rs  complexity_scoring.rs  cozodb_integrity.rs  daemon_lifecycle.rs  doc_generation.rs  dump_rust_tree.rs  federated_discovery.rs  hotspot_ranking.rs  impact_verify_pipeline.rs  incremental_graph_consistency.rs  ledger_adr.rs  ledger_bulk.rs  ledger_cli_parsing.rs  ledger_drift.rs  ledger_enforcement.rs  ledger_federation.rs  ledger_lifecycle.rs  ledger_provenance.rs  ledger_search.rs  ledger_signature_fix.rs  m33_migration.rs  milestone_j_remediation.rs  (+17 more)
(+1009 files in other folders)
