[package]
name = "changeguard"
version = "0.1.4"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1.2"
cozo = { git = "https://github.com/UnlikelyKiller/cozo-redux", rev = "14179d306d72079fac55d93562a84ee605087989", default-features = false, features = ["storage-sqlite", "graph-algo", "rayon"] }
rayon = "=1.10"

anyhow = "1.0.102"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

notify-debouncer-full = "0.7.0"
globset = "0.4.18"

camino = { version = "1.2.2", features = ["serde1"] }

rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"

uuid = { version = "1.23", features = ["v4", "serde"] }
gix = "0.84.0"

regex = "1.12"
regex-syntax = "0.8"
parking_lot = "0.12"

tantivy = "0.26.1"
crossbeam = "0.8"
encoding_rs = "0.8"

tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
chrono = { version = "0.4.44", features = ["serde"] }
wait-timeout = "0.2"
comfy-table = "7.1"
indicatif = "0.18"
ctrlc = "3.4"
sysinfo = "0.39"
windows-sys = { version = "0.61", features = ["Win32_System_Pipes", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
# Daemon dependencies
tokio = { version = "1.43", features = ["rt-multi-thread", "io-std", "macros", "sync", "time", "signal"], optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
futures-util = { version = "0.3", optional = true }
webbrowser = { version = "1.0", optional = true }
tower-lsp-server = { version = "0.23.0", optional = true }
blake3 = "1.8"
sha2 = "0.11"
hex = "0.4"
pulldown-cmark = { version = "0.13", default-features = false }
dunce = "1.0.5"
path-clean = "1.0.1"
ureq = { version = "2", features = ["json"] }
tree-sitter-go = "0.25.0"
scip = "0.8.1"
protobuf = "3.7"
ratatui = "0.30.0"
crossterm = "0.29.0"
ed25519-dalek = "2.1.1"
rand = "0.8"
ignore = "0.4.25"
inquire = "0.9.4"
strum = { version = "0.28.0", features = ["derive"] }
cedar-policy = "4.11.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_System_Com"] }

[features]
default = ["viz-server"]
daemon = ["dep:tower-lsp-server", "dep:tokio"]
viz-server = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures-util", "dep:webbrowser"]

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
trybuild = "1"

[patch.crates-io]
sqlite3-sys = { path = "./vendor/sqlite3-sys" }

[[test]]
name = "integration"
path = "tests/integration/main.rs"


